kernel: initial ipc implementation

--- a/sysroot/boot/limine.cfg
+++ b/sysroot/boot/limine.cfg
@@ -9,3 +9,6 @@ KERNEL_PATH=boot:///boot/kernel.elf
 
 MODULE_PATH=boot:///boot/echo.elf
 MODULE_STRING=echo
+
+MODULE_PATH=boot:///boot/fb.elf
+MODULE_STRING=fb
