kernel: add io syscalls

--- a/sysroot/boot/limine.cfg
+++ b/sysroot/boot/limine.cfg
@@ -15,3 +15,7 @@ MODULE_STRING=fb
 
 MODULE_PATH=boot:///boot/init.elf
 MODULE_STRING=init
+
+
+MODULE_PATH=boot:///boot/time.elf
+MODULE_STRING=time
